# deepseek_mhc

./: .gitignore  README.md  pyproject.toml
src/model/: __init__.py  config.yaml  configuration_mhc_q3.py  eval_gsm8k.py  modeling_mhc_q3.py  posttrain.py  train.py  utils.py
