[project]
name = "deepseek-mhc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "lm-eval>=0.4.9.2",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "trl>=0.27.0",
    "wandb>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model"]
